--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   </header>
   <section>
     <div id="quote-container">
-      <p id="quote">Quotes will be inserted here</p>
+      <p id="quote"></p>
+      <p id="author"></p>
       <button id="get-quote">Push me!</button>
     </div>
   </section>
