--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <title>Random Quote Machine | Courtney Noonan</title>
+  <link href="https://fonts.googleapis.com/css?family=Abhaya+Libre|Source+Sans+Pro" rel="stylesheet">
   <link rel="stylesheet" href="stylesheets/main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="script.js"></script>
 </head>
 <body>
-  <header>
-    <h1>Random Quote Machine</h1>
-  </header>
+
   <section>
     <div id="quote-container">
-      <p id="quote"></p>
+      <p id="quote">Random Programming and Computer Science Quotes</p>
       <p id="author"></p>
       <button id="get-quote">Push me!</button>
     </div>
+  <p id="signature">Coded with Love by <a href="https://github.com/Courtney2511">Courtney</a></p>
+  <p id="credit">Quotes courtesy of <a href="http://quotes.stormconsultancy.co.uk/">Storm Consulting</a></p>
   </section>
 
 
