--- a/index.html
+++ b/index.html
@@ -7,17 +7,38 @@
   <link rel="stylesheet" href="stylesheets/main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="script.js"></script>
-</head>
-<body>
+  <!-- Twitter frame -->
+  <script>window.twttr = (function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0],
+      t = window.twttr || {};
+    if (d.getElementById(id)) return t;
+    js = d.createElement(s);
+    js.id = id;
+    js.src = "https://platform.twitter.com/widgets.js";
+    fjs.parentNode.insertBefore(js, fjs);
 
+    t._e = [];
+    t.ready = function(f) {
+      t._e.push(f);
+    };
+
+    return t;
+  }(document, "script", "twitter-wjs"));
+  </script>
+</head>
+
+<body>
+  <!-- Quote Container -->
   <section>
     <div id="quote-container">
       <p id="quote">Random Programming and Computer Science Quotes</p>
       <p id="author"></p>
-      <button id="get-quote">Push me!</button>
+      <button id="get-quote">Get Quote</button>
+      <a id="twitter-share-button"
+  href="https://twitter.com/intent/tweet/?text=">Tweet it!</a>
     </div>
   <p id="signature">Coded with Love by <a href="https://github.com/Courtney2511">Courtney</a></p>
-  <p id="credit">Quotes courtesy of <a href="http://quotes.stormconsultancy.co.uk/">Storm Consulting</a></p>
+  <p id="credit">Quotes courtesy of <a href="http://quotes.stormconsultancy.co.uk/">Storm Consultancy</a></p>
   </section>
 
 
